@@ -3,12 +3,9 @@
 	<keyword>TITLE</keyword>
 	<scope>GLOBAL</scope>
 	<anchor>GLOBAL_TITLE</anchor>
-    <definition>TITLEPOS <meta>titlestring</meta></definition>
+    <definition>TITLE <meta>titlestring</meta></definition>
     <description  xmlns="http://www.w3.org/1999/xhtml">
         <p>Specifies the title text. </p>
         <p>The TITLE is shown in file-selectors for both the editor and the Cacti plugin. If you'd like the title to be shown on the map too, then add TITLEPOS line also.</p>
     </description>
-    <changes>
-    <change version="0.8">Originally added TITLEPOS.</change>
-    </changes>
 </configentry>
